FIX: Rechtschreibung foobar und z-index des head divs

--- a/sass/_head_and_tail.scss
+++ b/sass/_head_and_tail.scss
@@ -14,6 +14,7 @@
 	// background-image: url("../img/header.png"); // TODO: proper background (none with cool branding image, color)
 	text-align: center;
 	padding: 5px;
+	z-index: 5;
 }
 
 #footer {
